2006-07-31  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* input/regression/tuplet-full-length-note.ly: add file.

	* lily/instrument-name-engraver.cc (acknowledge_axis_group):
	always store axis group.

2006-07-27  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* input/regression/instrument-switch.ly: new file.

	* lily/instrument-switch-engraver.cc (process_music): new file.

	* ly/engraver-init.ly: add Instrument_switch_engraver

	* ly/music-functions-init.ly: \instrumentSwitch

	* scm/define-context-properties.scm
	(all-user-translation-properties): add instrumentCueName

	* scm/define-grobs.scm (all-grob-descriptions): add InstrumentSwitch

2006-07-26  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* ly/music-functions-init.ly: music function \transposition.

	* lily/parser.yy (command_element): softcode \transposition.

	* lily/fall-engraver.cc (process_music): delta-pitch -> delta-step.
	(process_music): oops.

	* lily/instrument-name-engraver.cc (start_spanner): new
	function. Create spanner when property changes.
	(stop_spanner): new function.

	* python/convertrules.py (conv): add rule.

	* lily/instrument-name-engraver.cc: shortVocalName iso. vocNam,
	shortInstrumentName iso. instr.

	* scm/output-ps.scm (dashed-line): add phase argument to
	dashed-line.

	* lily/bar-line.cc (dashed_bar_line): new function.
	(compound_barline): support \bar "dashed". 

	* lily/lily-parser-scheme.cc (LY_DEFINE): only write
	--output=DIR to DIR/BASE if it is a dir. 

	* flower/file-name.cc (file_part): new function
	(dir_part): new function

	* lily/lily-parser-scheme.cc (LY_DEFINE): 

	* DEDICATION: update

2006-07-25  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/instrument-name-engraver.cc: formatting.

	* python/convertrules.py (conv): bugfix for \epsfile.

2006-07-25  Joe Neeman  <joeneeman@gmail.com>

	* lily/grob.cc:
	
	* lily/gourlay-breaking.cc: Oops, these should have been included
	in my last commit

2006-07-24  Han-Wen Nienhuys  <hanwen@lilypond.org>
